# ros_lab

./: Arm 2 of Robot.stl  CMakeLists.txt  Gripper link 2.stl  README.md  arm.urdf  eval.py  model.launch.py  package.xml  robot.urdf  robot_base.xacro
arm_urdf/: CMakeLists.txt
arm_urdf/launch/: gazebo_servo.launch.py
arm_urdf/launch/install/: setup.sh
arm_urdf/meshes/: arm_1.stl  base.stl  gripper_link.stl  robot_shoulder.stl
arm_urdf/urdf/: arm.urdf.xacro
install/: local_setup.sh  setup.sh
install/arm_urdf/share/ament_index/resource_index/package_run_dependencies/: arm_urdf
install/arm_urdf/share/ament_index/resource_index/parent_prefix_path/: arm_urdf
install/arm_urdf/share/arm_urdf/: local_setup.sh  package.sh
install/arm_urdf/share/arm_urdf/launch/install/: local_setup.sh
install/arm_urdf/share/arm_urdf/meshes/: gripper_link_2.stl
install/arm_urdf/share/arm_urdf/urdf/: arm.urdf.xacro  robot_gazebo.xacro
install/robot_controller/share/robot_controller/: package.sh
install/robot_controller/share/robot_controller/config/: robot_controller.yaml
install/robot_controller/share/robot_controller/launch/: controller.launch.py
learning_tf_urdf/: setup.cfg  setup.py
learning_tf_urdf/meshes/: Arm 1 of Robot.stl  Arm 3 of Robot.stl  Gripper link 1.stl  Shoulder.stl
log/: latest_build
robot_controller/config/: robot_controller.yaml
robot_cpp_examples/: CMakeLists.txt  package.xml
robot_cpp_examples/src/: simple_action_client.cpp  simple_action_server.cpp  simple_moveit_interface.cpp  simple_service_client.cpp  simple_service_server.cpp  task_action_server.cpp
robot_manipulator/src/arm_urdf/: package.xml
robot_manipulator/src/arm_urdf/meshes/: gripper_base.stl
robot_manipulator/src/arm_urdf/urdf/: arm.urdf.xacro  robot_ros2_control.xacro
robot_manipulator/src/robot_controller/: package.xml
robot_moveit/: CMakeLists.txt  package.xml
robot_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  planning_python_api.yaml  robot.srdf
robot_moveit/launch/: moveit.launch.py
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/action/: RobotTask.action
src/arm_urdf/launch/log/: latest_build
src/arm_urdf/meshes/: arm_2.stl  arm_3.stl
src/eval1_62/: frames_2025-01-21_14.40.01.gv  package.xml  setup.cfg  setup.py
src/eval1_62/eval1_62/: transformation.py
src/eval1_62/launch/: static_transform.launch.py
src/learning_tf_urdf/: package.xml
src/learning_tf_urdf/learning_tf_urdf/: transformation.py
src/learning_tf_urdf/meshes/: Base.stl  Gripper base.stl
src/learning_tf_urdf/urdf/: arm.urdf  common_properties.xacro  frames_2025-01-29_13.38.32.gv
src/robot_controller/: CMakeLists.txt
src/test_turtle/: setup.py
src/test_turtle/test_turtle/: pub_sub.py
test_turtle/: package.xml
test_turtle/launch/: remap.launch.py
