<?xml version="1.0"?>
<package format="3">
  <name>robot_msgs</name>
  <version>0.0.0</version>
  <description>Custom action definitions for robot tasks</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- This line is required for any package that installs IDL (msg/srv/action) -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Buildtool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Interface generators -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_export_depend>rosidl_default_generators</build_export_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Action message dependencies -->
  <build_depend>action_msgs</build_depend>
  <build_export_depend>action_msgs</build_export_depend>
  <exec_depend>action_msgs</exec_depend>

  <!-- Time and duration types -->
  <build_depend>builtin_interfaces</build_depend>
  <build_export_depend>builtin_interfaces</build_export_depend>
  <exec_depend>builtin_interfaces</exec_depend>
</package>
